syntax = "proto3";

option go_package = "pb/game";

message BuffTable {
	uint32 id = 1;
	uint32 nocaster = 2;
	uint32 bufftype = 3;
	map <string, bool> tag = 4;
	map <string, bool> immunetag = 5;
	map <string, bool> dispeltag = 6;
	uint32 level = 7;
	uint32 maxlayer = 8;
	uint32 infiniteduration = 9;
	double duration = 10;
	uint32 forceinterrupt = 11;
	double interval = 12;
	uint32 intervalcount = 13;
	repeated double intervaleffect = 14;
	double movement_speed_boost = 15;
	double movement_speed_reduction = 16;
	string healthregeneration = 17;
	repeated uint32 subbuff = 18;
	repeated uint32 targetsubbuff = 19;
	double nodamageorskillhitinlastseconds = 20;
	uint32 time = 21;
	string bonusdamage = 22;
}

message BuffTabledData {
	repeated BuffTable data = 1;
}
